Fix for issue #433 The OAuth signature library now performs correct percent-encoding of the required element. We leverage Jersey's UriComponent class to encode the various elements of the signature base string, thus removing the need for a dedicated URLCodec class.